# ZTicketAsset

./: CMakeLists.txt  database.h  dlgeditasset.cpp  dlgeditasset.h  dlgeditasset.ui  emoji_map.h  global.js  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  sidebar.cpp  sidebar.h  zassetswidget.cpp  zassetswidget.h  zassetswidget.ui  zbackend.cpp  zbackend.h  zdatabase.cpp  zdatabase.h  zemoji.cpp  zemoji.h  zjsontablewidget.cpp  zjsontablewidget.h  zlogin.cpp  zlogin.h  zlogin.ui  zstepswidget.cpp  zstepswidget.h  zstepswidget.ui  ztable.cpp  ztable.h  zticketasset.qml  zticketswidget.cpp  zticketswidget.h  zticketswidget.ui
ZStyle/: CMakeLists.txt  qmldir
icons/: emoji.txt  emoji.xlsx  emoji_table.txt
pages/: AssetTable.qml  DatePicker.qml  DialogPage.qml  LoginPage.qml  TablePage.qml  TextFieldPage.qml  TicketTable.qml  TicketTree.qml
resource/styles/: dark.qss  fusion.qss  light.qss
utility/: zplaceholderlineedit.h
